--- a/about.html
+++ b/about.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h2>About Page</h2>
+    <h2>About Pages</h2>
+    <h2>About Pages</h2>
 </body>
 </html>
