--- a/about.html
+++ b/about.html
@@ -6,7 +6,8 @@
     <title>Document</title>
 </head>
 <body>
+    <h2>About Pages </h2>
     <h2>About Pages</h2>
-    <h2>About Pages</h2>
+    <h1>On branch feature 1</h1>
 </body>
 </html>
