--- a/about.html
+++ b/about.html
@@ -9,5 +9,8 @@
     <h2>About Pages</h2>
     <h2>About Pages</h2>
     <h1>Staff</h1>
+    <h1>Arun</h1>
+    <h1>Aswin</h1>
+    <h1>Amal</h1>
 </body>
 </html>
